--- a/Midterm2.ipynb
+++ b/Midterm2.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Midterm 2 coding Questions Total : 60 \n",
     "### 50 minute\n",
-    "### Name-\n",
+    "### Name- Kadin McWilliams\n",
     "After complition submit it on Moodle using `GitHub` with in the assigned time \n"
    ]
   },
